[gd_scene load_steps=12 format=2]

[ext_resource path="res://scripts/game_scenes/GameSceneOne.gd" type="Script" id=1]
[ext_resource path="res://scenes/ui/TransitionOverlay.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/player_ui/ToolTipScene.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/player_ui/GameWonScene.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/player_ui/PauseScene.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/player_ui/GameOverScene.tscn" type="PackedScene" id=6]
[ext_resource path="res://scripts/player/PlayerScript.gd" type="Script" id=7]

[sub_resource type="Animation" id=5]
resource_name = "Head Bob"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0.05, 0 ), Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "Jump Land"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, -0.05, 0 ), Vector3( 0, 0.05, 0 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimationPlayer:root_node")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ NodePath("..") ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}

[sub_resource type="CapsuleShape" id=8]
radius = 0.4
height = 0.002

[node name="GameScene" type="Spatial"]
script = ExtResource( 1 )

[node name="GameNode" type="Node" parent="."]

[node name="GameWindow" type="Spatial" parent="."]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0 )
script = ExtResource( 7 )

[node name="PlayerCamera" type="Camera" parent="GameWindow"]
fov = 90.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="GameWindow/PlayerCamera"]
"anims/Head Bob" = SubResource( 5 )
"anims/Jump Land" = SubResource( 6 )
anims/RESET = SubResource( 7 )

[node name="PlayerShip" type="KinematicBody" parent="GameWindow"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -3 )

[node name="RayCast" type="RayCast" parent="GameWindow/PlayerShip"]
enabled = true
cast_to = Vector3( 0, 0, -3 )
collide_with_areas = true

[node name="PlayerCollisionBody" type="CollisionShape" parent="GameWindow/PlayerShip"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 8 )

[node name="CSGSphere" type="CSGSphere" parent="GameWindow/PlayerShip"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1 )

[node name="CSGBox" type="CSGBox" parent="GameWindow/PlayerShip"]
transform = Transform( 0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, 0, 0, -0.5 )
height = 0.25

[node name="Reticle" type="Spatial" parent="GameWindow"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -64 )

[node name="CSGTorus" type="CSGTorus" parent="GameWindow/Reticle"]
transform = Transform( 0.25, 0, 0, 0, -1.09278e-08, -0.25, 0, 0.25, -1.09278e-08, 0, 0, 0 )

[node name="UI" type="Node" parent="GameWindow"]

[node name="Pause" type="Node" parent="GameWindow/UI"]

[node name="PauseScene" parent="GameWindow/UI/Pause" instance=ExtResource( 5 )]
visible = false

[node name="GameEnd" type="Node" parent="GameWindow/UI"]

[node name="GameWonScene" parent="GameWindow/UI/GameEnd" instance=ExtResource( 4 )]
visible = false

[node name="GameOverScene" parent="GameWindow/UI/GameEnd" instance=ExtResource( 6 )]
visible = false

[node name="PlayerUI" type="Node2D" parent="GameWindow/UI"]

[node name="Tooltip" parent="GameWindow/UI/PlayerUI" instance=ExtResource( 3 )]

[node name="CurrentScoreLabel" type="Label" parent="GameWindow/UI/PlayerUI"]
margin_right = 1280.0
margin_bottom = 64.0
text = "0"
align = 1
valign = 1

[node name="Bullets" type="Spatial" parent="."]

[node name="Environment" type="Spatial" parent="."]

[node name="CSGBox" type="CSGBox" parent="Environment"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 32, -4, 0 )
width = 64.0
depth = 32.0

[node name="TransitionOverlay" parent="." instance=ExtResource( 2 )]
